quoting-CypressTK1/force-app/main/default/objects/CloneSchema__mdt/CloneSchema__mdt.object-meta.xml
<CustomObject>
    <label>Clone Schema</label>
    <pluralLabel>Clone Schemas</pluralLabel>
</CustomObject>