quoting-CypressTK1/force-app/main/default/objects/CloneSchema__mdt/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>