quoting-CypressTK1/force-app/main/default/objects/CloneSchema__mdt/fields/IsRootCloneSchema__c.field-meta.xml
<CustomField>
    <fullName>IsRootCloneSchema__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Root Clone Schema</label>
    <type>Checkbox</type>
</CustomField>