quoting-CypressTK1/force-app/main/default/objects/CloneSchema__mdt/fields/TargetObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectApiName__c</fullName>
    <label>Target Object Api Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>